--- a/resources/sass/_home.scss
+++ b/resources/sass/_home.scss
@@ -25,7 +25,7 @@ img {
     width: 100%;
 }
 
-h1 {
+#float-title {
     position: relative;
     text-align: center;
     color: #5c2e4d;
